@@ -4,6 +4,8 @@ CHANGES-1.3.txt
 CHANGES IN CUPS V1.3.8
 
 	- Documentation updates (STR #2785, STR #2861, STR #2862)
+	- The scheduler would crash if you started a printer that
+	  pointed to a backend that did not exist (STR #2865)
 	- The ppdLocalize functions incorrectly mapped all generic
 	  locales to country-specific locales.
 	- The cups-driverd program did not support Simplified Chinese
